--- a/Project.toml
+++ b/Project.toml
@@ -1,8 +1,9 @@
 name = "ExactDiagonalization"
 uuid = "542302b3-cc4d-4e48-b94a-05d0aa837458"
 authors = ["JayRen <jieren3996@foxmail.com>"]
-version = "0.1.1"
+version = "0.1.3"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
